--- a/nsc-be/nsc/docker-compose.yml
+++ b/nsc-be/nsc/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     networks:
       - dj
   dj_web:
-    contaainer_name: dj-web
+    container_name: dj-web
     build: .
     command: gunicorn nsc.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 120 --log-level=debug
     volumes:
