--- a/nsc-be/nsc/others/nginx-dj.conf
+++ b/nsc-be/nsc/others/nginx-dj.conf
@@ -1,5 +1,10 @@
 server {
     server_name wd0304.coe.psu.ac.th;
+    root /var/www/dj;
+
+    location / {
+        try_files $uri $uri/ /index.html =404;
+    }
 
     location ~ ^/(api|admin) { #reverse proxy
         proxy_pass http://localhost:8000;
@@ -10,7 +15,7 @@ server {
         proxy_cache_bypass $http_upgrade;        
    }
 
-    location ~ ^/(media|static) {
+    location ~ ^/(media|dj-static) {
         root /opt/docker-volumes/;
     }
 }
